# ChannelBridge

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: backend.yml  e2e.yml  frontend.yml  security.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: api.py  auth.py  config.py  database.py  main.py  models.py  seed.py  services.py  webhook_receiver.py  worker.py
backend/app/validation/: engine.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: test_api.py  test_engine.py
docs/: analytics.md  architecture.md  benchmark-methodology.md  benchmark-results.md  feed-specification.md  limitations.md  product-spec.md  resume-claims.md  security.md  testing.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: core-flow.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/test/: setup.ts
samples/invalid/: northstar-catalog.json
samples/valid/: harborlight-catalog.xml  northstar-catalog.json
schemas/: channelbridge-feed-v1.schema.json  channelbridge-feed-v1.xsd
scripts/: benchmark.py  generate_feed.py
