[project]
name = "channelbridge-api"
version = "1.0.0"
description = "Independent media partner onboarding and feed validation API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1", "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4", "alembic>=1.14,<2", "pydantic-settings>=2.5,<3", "python-multipart>=0.0.12",
  "PyJWT>=2.9,<3", "pwdlib[argon2]>=0.2,<1", "defusedxml>=0.7,<1"
]
[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx>=0.27,<1", "ruff>=0.7,<1", "mypy>=1.13,<2", "types-defusedxml"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["F", "I"]
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disable_error_code = ["no-any-return", "no-untyped-def", "var-annotated", "assignment", "arg-type", "union-attr"]
